--- a/requerimientos/templates/index.html
+++ b/requerimientos/templates/index.html
@@ -27,6 +27,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Requerimientos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/historicos">Historicos</a>
+          </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="/logout">{{user.username}} <i class="fa-solid fa-right-from-bracket"></i></a>
